--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <body>
         <div align="center">
-            <font size="20px">Hello Roni</font>
+            <font size="20px">Welcome!</font>
             <p/>
-            <img src="cloud_skills.jpg" width="800px"/>
+            <img src="./images/world.jpg" width="600px"/>
         </div>
     </body>
 </html>
